kub-app/k8s/test-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-client
  namespace: hrm
  labels:
    app: test-client
spec:
  containers:
  - name: curl
    image: curlimages/curl:8.5.0
    command: ["sleep", "36000"]
