kub-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hrm-app-svc
  namespace: hrm
spec:
  selector:
    app: hrm-app
  ports:
  - port: 80
    targetPort: 5000
