kub-app/k8s/allow-egress-to-hrm-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-hrm-app
  namespace: hrm
spec:
  podSelector:
    matchLabels:
      app: test-client
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: hrm-app
    ports:
    - protocol: TCP
      port: 5000
