kub-app/k8s/allow-ingress-from-test-client.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-test-client
  namespace: hrm
spec:
  podSelector:
    matchLabels:
      app: hrm-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: test-client
    ports:
    - protocol: TCP
      port: 5000
